// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BigAlert /> should render a succes alert when type is set to success 1`] = `
<div
  className="alert text-center alert-success"
  role="alert"
>
  I am success
</div>
`;

exports[`<BigAlert /> should render correctly when there is message 1`] = `
<div
  className="alert text-center alert-danger"
  role="alert"
>
  Just an error
</div>
`;

exports[`<BigAlert /> should render nothing when there is no message 1`] = `""`;

exports[`<SmallAlert /> should render correctly when there is message 1`] = `
<span
  className="text-danger text-center small"
>
  Just an error
</span>
`;

exports[`<SmallAlert /> should render nothing when there is no message 1`] = `""`;
